fix: close DOCX security review findings